# magicdog_sdk

./: CHANGELOG.md  README.md
doc/source/: conf.py  index.rst
doc/source/cpp_api/: 1.robot_reference.md  2.high_level_motion_reference.md  3.low_level_motion_reference.md  4.sensor_reference.md  5.audio_reference.md  6.monitor_reference.md
doc/source/examples/: 1.high_level_motion_example.md  2.low_level_motion_example.md  3.sensor_example.md  4.audio_example.md  5.monitor_example.md
doc/source/overview/: 1.overview_reference.md  2.architecture_reference.md  3.service_reference.md  4.quick_start_reference.md
doc/source/python_api/: 1.robot_reference.md  2.high_level_motion_reference.md  3.low_level_motion_reference.md  4.sensor_reference.md  5.audio_reference.md  6.monitor_reference.md
example/cmake_example/: cmake_example.cpp
example/cpp/: CMakeLists.txt
example/cpp/audio_example/: audio_example.cpp
example/cpp/betago/: CMakeLists.txt  README.txt
example/cpp/betago/include/: audio_control.h  config.h  face_recognition.h  http_client.h  motion_control.h  nav_control.h  sensor_control.h  voice_recognition.h
example/cpp/betago/src/: audio_control.cpp  config.cpp  face_recognition.cpp  http_client.cpp  main.cpp  motion_control.cpp  nav_control.cpp  robot.cpp  sensor_control.cpp  voice_recognition.cpp
example/cpp/cmake_example/: CMakeLists.txt  cmake_example.cpp
example/cpp/high_level_motion_example/: high_level_motion_example.cpp
example/cpp/keyboard_operator/: CMakeLists.txt  face_recognize_client.cpp  keyboard_operator.cpp  voice_recognize_client.cpp
example/cpp/low_level_motion_example/: low_level_motion_example.cpp
example/cpp/monitor_example/: monitor_example.cpp
example/cpp/sensor_example/: sensor_example.cpp
example/cpp/slam_navigation_example/: CMakeLists.txt  navigation_example.cpp  slam_example.cpp
example/pybind11_test/: test_audio_struct.py  test_high_level_motion_struct.py  test_low_level_motion_struct.py  test_monitor_struct.py  test_sensor_struct.py  test_slam_navigation_struct.py
example/python/: audio_example.py  client_face_once.py  client_face_stream.py  client_speech_once.py  face_register_client_unix.py  high_level_motion_example.py  keboard_operator.py  low_level_motion_example.py  monitor_example.py  navigation_example.py  sensor_example.py  sensor_example1.py  slam_example.py  subscript_image_demo.py
include/: magic_audio.h  magic_motion.h  magic_robot.h  magic_sdk_version.h  magic_sensor.h  magic_slam_navigation.h  magic_state_monitor.h  magic_type.h
